# F12-Programacion

./: .gitignore  README.md
Tareas/Tarea1/: tarea1.tex
Tareas/Tarea3/: busqueda_dos_en_dos.cpp  contar_vocales.cpp  numero_primo.cpp  suma_digitos.cpp
cpp/ejemplos/: hola_mundo.cpp  main
ejemplos/practica2_analisis_datos/: pyproject.toml
ejemplos/practica2_analisis_datos/notebooks/: analisis_estrellas_estudiante.ipynb
ejemplos/python/: BigONotation.ipynb  BusquedaDos.ipynb  HojaTrabajo_IntroduccionPython.ipynb  IntroduccionPython.ipynb  MatplotlibSeaborn.ipynb  Modulos.ipynb  Numpy.ipynb  Ordenamiento.ipynb  Pandas.ipynb  README.md  XML_JSON_APIs.ipynb  fisica_basica.py  fisica_poo.py  introduccion_python.py
examenes/parcial2/: examen_parcial2_estudiante.ipynb
practicas/cpp/: ordenamiento.cpp
