[project]
name = "analisis-datos"
version = "0.1.0"
description = "Análisis de datos con Python usando Poetry"
authors = [
    {name = "F12 Programacion"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
